# wired-gateway

./: Cargo.toml  Dockerfile
helm/: Chart.yaml  values.yaml
helm/templates/: _helpers.tpl  deployment.yaml  hpa.yaml  service.yaml  serviceaccount.yaml
src/: main.rs
