[package]
name = "wired-gateway"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.0-rc.2"
hyper = { version = "0.14", features = ["client"] }
tokio = { version = "1.21", features = ["macros", "rt-multi-thread"] }